<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".criticize"
    android:background="@drawable/criticize"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="90dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_h"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_b"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_a"
        android:textSize="40dp"
        android:textColor="@color/teal_700"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="120dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />

</LinearLayout>